--- a/Homework1/style.css
+++ b/Homework1/style.css
@@ -1,1 +1,34 @@
+body {
+  background-color: HotPink;
+  color: Black;
+  font-family: "Times New Roman", Times, serif;
+  margin: 0;
+  padding: 40px;
+  line-height: 1.7;
+}
 
+h1 {
+  padding: 35px;
+  text-align: center;
+  margin: 0 auto 18px auto;
+  max-width: 950px;
+  letter-spacing: 1px;
+  background-color: LightPink;
+  color: #EBCBA2;
+}
+
+h2, h3 {
+  text-align: center;
+}
+
+h2 {
+  margin: 0 auto 28px auto;
+  max-width: 950px;
+}
+
+
+p {
+  max-width: 75%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
